--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,9 @@
     --color-accent: #d84040;
     --color-accent-hover: #c23939;
     --color-light: #eeeeee;
+    --color-dark: #000000;
+    --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
 }
 
 * {
@@ -14,7 +17,6 @@
 }
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: linear-gradient(135deg, var(--color-primary) 0%, #2a1a1a 50%, var(--color-secondary) 100%);
     color: var(--color-light);
     min-height: 100vh;
@@ -38,6 +40,11 @@ nav {
 .logo {
     font-size: 32px;
     font-weight: bold;
+    color: var(--color-accent);
+}
+
+.logo  a{
+    text-decoration: none;
     color: var(--color-accent);
 }
 
@@ -416,6 +423,7 @@ section {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 60px;
+    align-items: center;
 }
 
 .contact-form {
@@ -432,7 +440,7 @@ section {
 .form-group label {
     display: block;
     margin-bottom: 5px;
-    color: var(--color-accent);
+    color: var(--color-light);
     font-weight: 500;
 }
 
@@ -468,10 +476,26 @@ section {
     gap: 15px;
 }
 
-.info-icon {
-    font-size: 24px;
+.info-item a {
+    text-decoration: none;
+    color: var(--color-light);
+}
+
+.info-item a:hover {
+    text-decoration: none;
     color: var(--color-accent);
+}
+
+.info-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: var(--color-primary);
     width: 40px;
+    height: 40px;
+    background-color: var(--color-light);
+    border-radius: 50%;
 }
 
 .info-item h4 {
